# unAI

./: C-CUDA.tar  README.md  prepro.py
CIFAR-10-CUDA/: CIFAR-10-CUDA.sln
CIFAR-10-Cpp/: CIFAR-10-CUDA.vcxproj  CMakeLists.txt
CIFAR-10-Cpp/src/: main.cpp
CIFAR-10-Python/: TGPU.py  TPREPRO.py  main,py  main.ipynb  main.py  process.py
